kubernetes/namespaces/codejam-winners/monsteras/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monsteras
  namespace: codejam-winners
spec:
  selector:
    app: monsteras
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
